--- a/07-Pig-Game/mine/style.css
+++ b/07-Pig-Game/mine/style.css
@@ -113,11 +113,8 @@ main {
   cursor: pointer;
   font-weight: 400;
   transition: all 0.2s;
-
-  background-color: white;
   background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(10px);
-
   padding: 0.7rem 2.5rem;
   border-radius: 50rem;
   box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
@@ -126,11 +123,14 @@ main {
 .btn::first-letter {
   font-size: 2.4rem;
   display: inline-block;
-  margin-right: 0.7rem;
+  margin-right: 0.5rem;
 }
 
 .btn--new {
   top: 4rem;
+}
+.btn--help {
+  top: 10.8rem;
 }
 .btn--roll {
   top: 39.3rem;
@@ -139,19 +139,25 @@ main {
   top: 46.1rem;
 }
 
-.btn:active {
+.btn:active:enabled {
   transform: translate(-50%, 3px);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
 }
 
-.btn:focus {
+.btn:focus:enabled {
   outline: none;
+}
+
+.btn--disabled {
+  cursor: default;
+  filter: grayscale(100%);
+  box-shadow: none;
 }
 
 .dice {
   position: absolute;
   left: 50%;
-  top: 16.5rem;
+  top: 22.3rem;
   transform: translateX(-50%);
   height: 10rem;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
